# La_mega

./: README.md  database.db  exemple_01.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06b383447f6a_bigbang.py  88b86f85df78_bigbang.py
app/: inserts_mega_sena.py  main.py  raspagem.py
app/concursos/: raspagem.py
app/config/: config.py
app/functions/concursos/: raspagem.py  raspagem2.py
app/functions/mega_da_virada/: raspagem.py
app/models/: __init__.py  concursos.py  mega_models.py
