[tool.poetry]
name = "raspando-dados-parsel"
version = "0.1.0"
description = ""
authors = ["jvras58 <jvras@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
parsel = "^1.8.1"
httpx = "^0.26.0"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
